--- a/easyshop/WebContent/front/personal_orderLogistics.html
+++ b/easyshop/WebContent/front/personal_orderLogistics.html
@@ -58,15 +58,15 @@
         				<div class="yl-datagrid five">
         					<div class="item">
         						<label>发货人：</label>
-        						<p class="form-ctt">aaa</p>
+        						<p class="form-ctt">{{send.consignee}}</p>
         					</div>
         					<div class="item">
         						<label>地址：</label>
-        						<p class="form-ctt">bbb</p>
+        						<p class="form-ctt">{{send.addr}}</p>
         					</div>
         					<div class="item">
         						<label>手机号码：</label>
-        						<p class="form-ctt">ccc</p>
+        						<p class="form-ctt">{{send.phone}}</p>
         					</div>
         				</div>
         			</div>
@@ -93,6 +93,11 @@
                 		consignee: "",
                 		addr: "",
                 		phone: ""
+                	},
+                	send: {
+                	    consignee: "",
+                        addr: "",
+                        phone: ""
                 	},
                     pay: {
                 		type: "支付宝在线支付/银联在线支付/微信在线支付",
